--- a/src/app/web-layout/home/home.component.html
+++ b/src/app/web-layout/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap gap-6 p-10 bg-gray-50">
+<div *ngIf="groupedProducts.length>0" class="flex flex-wrap gap-6 p-10 bg-gray-50">
   <div *ngFor="let item of groupedProducts"
     class="w-full sm:w-5/12 md:w-1/3 lg:w-1/4 bg-white rounded-2xl shadow-md overflow-hidden flex flex-col justify-between transition-transform hover:scale-[1.02]">
     <!-- Images Carousel -->
@@ -24,19 +24,18 @@
       <div class="flex flex-col items-start px-4 mt-4">
         <div *ngIf="item.product.has_colors" class="flex gap-2 items-center mb-3">
           <span class="text-xs text-gray-500">Colors:</span>
-          <div (click)="item.selectedColorIndex = colorIndex;item.selectedSizeIndex=0" *ngFor="let color of item.colors; let colorIndex = index"
-            class="p-0.5 rounded-full bg-white ring-offset-1"
+          <div (click)="item.selectedColorIndex = colorIndex;item.selectedSizeIndex=0"
+            *ngFor="let color of item.colors; let colorIndex = index" class="p-0.5 rounded-full bg-white ring-offset-1 {{checkColorOutofStock(color)?'opacity-50':''}}"
             [ngStyle]="colorIndex === item.selectedColorIndex ? { boxShadow: '0 0 0 1px ' + color.hexCode } : {}">
             <div class="w-5 h-5 rounded-full cursor-pointer" [ngStyle]="{ 'background-color': color.hexCode }"
-              [ngClass]="{
-      'border-gray-300': colorIndex !== item.selectedColorIndex
-    }"></div>
+              ></div>
           </div>
         </div>
 
         <div *ngIf="item.product.has_sizes" class="flex flex-wrap gap-2">
-          <p (click)="item.selectedSizeIndex = sizeIndex" *ngFor="let size of item.colors[item.selectedColorIndex]?.sizes; let sizeIndex = index"
-            class="w-8 h-8 rounded-md text-sm font-medium border text-gray-700 shadow text-center flex items-center justify-center cursor-pointer"
+          <p (click)="item.selectedSizeIndex = sizeIndex"
+            *ngFor="let size of item.colors[item.selectedColorIndex]?.sizes; let sizeIndex = index"
+            class="w-8 h-8 rounded-md text-sm font-medium border text-gray-700 shadow text-center flex items-center justify-center cursor-pointer {{size.available<1?'opacity-20':''}}"
             [ngClass]="{
               'bg-blue-500 text-white border-blue-600': sizeIndex === item.selectedSizeIndex,
               'bg-white border-gray-300': sizeIndex !== item.selectedSizeIndex
@@ -48,11 +47,13 @@
     </div>
 
     <!-- Button -->
-    <button (click)="addToCart(item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex])" *ngIf="item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex].available > 0 && !item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex].addedToCart"
+    <button (click)="addToCart(item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex])"
+      *ngIf="item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex].available > 0 && !item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex].addedToCart"
       class="w-full bg-green-500 text-white py-3 font-semibold hover:bg-green-600 transition">
       Add to Cart
     </button>
-    <button (click)="removeFromCart(item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex])" *ngIf="item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex].available > 0 && item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex].addedToCart"
+    <button (click)="removeFromCart(item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex])"
+      *ngIf="item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex].available > 0 && item.colors[item.selectedColorIndex]?.sizes[item.selectedSizeIndex].addedToCart"
       class="w-full bg-red-200 text-red-700 py-3 font-semibold  transition">
       Remove
     </button>
@@ -62,3 +63,4 @@
     </button>
   </div>
 </div>
+  <div *ngIf="groupedProducts.length===0" class="font-bold text-4xl text-gray-500 p-10">Nothing in shop at the moment...</div>
